massive refactor to reduce the complexity of GoBoard. update intellij warnings settings and made corresponding corrections.